--- a/templates/base.html
+++ b/templates/base.html
@@ -43,7 +43,12 @@
   </main>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
-  <script src="https://unpkg.com/lightweight-charts/dist/lightweight-charts.standalone.production.js" crossorigin="anonymous"></script>
+  <!-- Fallback: если unpkg не загрузится, автоматически подставим jsDelivr -->
+  <script
+    src="https://unpkg.com/lightweight-charts/dist/lightweight-charts.standalone.production.js"
+    crossorigin="anonymous"
+    onerror="this.onerror=null;this.src='https://cdn.jsdelivr.net/npm/lightweight-charts/dist/lightweight-charts.standalone.production.js'">
+  </script>
   <script src="/static/js/main.js"></script>
   <script src="/static/js/analysis_panels.js"></script>
   {% block scripts %}{% endblock %}
